Partie_log/conf-iptables-rpb.txt
# Generated by iptables-save v1.6.0 APRES REVISION
*nat
:PREROUTING ACCEPT [103139:4706796]
:INPUT ACCEPT [103139:4706796]
:OUTPUT ACCEPT [22:1533]
:POSTROUTING ACCEPT [22:1533]
COMMIT
*filter
:INPUT ACCEPT [747:64379]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [296:54064]
-A INPUT -i eth0 -p tcp -m tcp --dport 22 --src 192.168.56.101 --syn -m connlimit --connlimit-above 100 -m limit --limit 30/hour --limit-burst 1 -j LOG --log-prefix "PERMIT RULE=1 "
-A INPUT -i eth0 -p tcp -m tcp --dport 23 -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=2 "
-A INPUT -i eth0 -p tcp -m tcp -m limit --limit 2/sec --dport 20:21 -j LOG --log-prefix "PERMIT RULE=3 "
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=4 "
-A INPUT -i eth0 -p tcp -m tcp --dport 3306  -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=5 "
-A INPUT -i eth0 -p udp -m udp   -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=6 "
-A INPUT -i eth0 -p tcp -m tcp --dport 445 -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=7 "
-A INPUT -i eth0 -p tcp -m tcp --dport 443 -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=8 "
-A INPUT -i eth0 -p tcp -m tcp --dport 8080 -m limit --limit 2/sec -j LOG --log-prefix "PERMIT RULE=9 "

-A INPUT -i eth0 -p tcp -m state --state NEW,RELATED,ESTABLISHED -m limit --limit 1/sec -m multiport ! --dports 80,23,20,21,22,3306,445,443,8080 -j LOG --log-prefix "DENY RULE=34 "
COMMIT
# Completed  00:20:28 2020
